Fix Vercel 404 error - update vercel.json configuration"

--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,10 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "@vercel/node"
+    }
+  }
 }
